--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     implementation "org.mapstruct:mapstruct:$mapstructVersion"
     annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
     implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:$swaggerVersion"
+    implementation "org.springframework:spring-tx"
 }
