feature: adding role repository db and initial logic of hu-3

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -31,3 +31,12 @@ adapters:
     schema: "public"
     username: "admin"
     password: "admin123"
+
+
+security:
+  jwt:
+    issuer: "your-company"
+    audience: "your-apis"
+    # Para HS256: una secret de al menos 32 bytes (usa env var en prod)
+    secret: "${JWT_SECRET:dev-very-long-secret-change-me-please-0123456789}"
+    expirationSeconds: 3600
