--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,5 @@ include ':reactive-web'
 project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
 include ':r2dbc-postgresql'
 project(':r2dbc-postgresql').projectDir = file('./infrastructure/driven-adapters/r2dbc-postgresql')
+include ':cryptosecurity'
+project(':cryptosecurity').projectDir = file('./infrastructure/driven-adapters/cryptosecurity')
